# habitipy

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: FUNDING.yml  copilot-instructions.md
.github/agents/: habitipy-api-reviewer.agent.md  habitipy-architecture-reviewer.agent.md  habitipy-dx-reviewer.agent.md  habitipy-implementer.agent.md  habitipy-orchestrator.agent.md  habitipy-planner.agent.md  habitipy-spec-reviewer.agent.md  habitipy-test-author.agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/ai/: habitipy-agent-guide.md
docs/site/: api.md  development.md  getting-started.md  index.md
habitipie/: __init__.py  _json.py  pagination.py
habitipie/models/: habits.py
habitipy/: __init__.py  _json.py  _resource.py  areas.py  client.py  errors.py  habits.py  pagination.py  runtime.py  transport.py
habitipy/models/: __init__.py  habits.py
tests/: test_areas.py  test_habits.py
