[project]
name = "habitipy"
version = "0.1.0"
description = "A Python client for Habitify: manage habits, logs, completions, skips, and progress from code."
authors = [
    {name = "ReiRev",email = "reirev2913@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
]


[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "respx>=0.21,<1",
    "tox>=4.15,<5",
]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
