[project]
name = "habitipie"
version = "0.1.0"
description = "A Python client for Habitify: manage habits, logs, completions, skips, and progress from code."
authors = [
    {name = "ReiRev",email = "reirev2913@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
]


[project.optional-dependencies]
dev = [
    "black>=25,<26",
    "isort>=5.13,<6",
    "mypy>=1.11,<2",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "respx>=0.21,<1",
    "ruff>=0.11,<1",
    "tox>=4.15,<5",
]


[tool.black]
line-length = 100
target-version = ["py310"]


[tool.isort]
profile = "black"
line_length = 100
py_version = 310
src_paths = ["habitipie", "tests"]


[tool.ruff]
line-length = 100
target-version = "py310"


[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.10"
files = ["habitipie"]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true


[tool.coverage.run]
source = ["habitipie"]


[tool.coverage.report]
show_missing = true
skip_covered = true


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
